--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,14 +12,22 @@ jobs:
         with:
           go-version: "1.19"
       - name: Install dependencies
-        run: go mod tidy
+        run: |
+          cd backend
+          go mod tidy
       - name: Test with the Go CLI
-        run: go test ./...
+        run: |
+          cd backend
+          go test ./...
       - name: Format code
-        run: go run ./scripts/format.sh
+        run: |
+          cd backend
+          go run ./scripts/format.sh
       - name: Build
         env:
           GO_ENV: production
           GOOS: linux
           GOARCH: amd64
-        run: go build -ldflags="-s -w"
+        run: |
+          cd backend
+          go build -ldflags="-s -w"
