--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -48,6 +48,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: cd frontend
-      - run: npm ci
+      - run: npm install
       - run: npm run format
       - run: npm test
