--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,7 +47,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd frontend
-      - run: npm install
-      - run: npm run format
-      - run: npm test
+      - run: |
+          cd frontend
+          npm install
+      - name: Format
+      - run: |
+          cd frontend
+          npm run format
+      - name: Test
+      - run: |
+          cd frontend
+          npm test
