--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "axios": "^0.27.2",
-    "ioredis": "^5.3.2",
     "jest-mock-axios": "^4.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,8 +20,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "redis": "^4.6.6",
     "typescript": "^4.9.5",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
